fix of: Conversation not showing

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,4 +1,4 @@
-$base-font-size: calc(13px + 0.2vh + 0.1vw);
+$base-font-size: calc(14px + 0.16vh + 0.06vw);
 $font-size-small: 0.75rem;
 
 $module: 1.618rem;
